Changed Title (github sync test)

--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Pork Paint - Release the Mazalo</title>
+    <title>Pork Paint - Release the Piggy Artist Inside You</title>
     <script src="lib/kinetic-v5.1.0.min.js"></script>
     <script src="lib/raphael-min.js"></script>
 </head>
