Added scripts to the libraries in the index.html file. Added jquery

--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -10,5 +10,8 @@
         
     </div>
     <div id="canvas-container"></div>
+    <script src="lib/jquery-2.1.1.js"></script>
+    <script src="lib/kinetic-v5.1.0.js"></script>
+    <script src="lib/raphael.js"></script>
 </body>
 </html>
