Added fill color to the shapes

--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -22,7 +22,7 @@
             width: window.innerWidth,
             height: window.innerHeight
         });
-        var triangle = new Triangle(stage, 'black', 2);
+        var triangle = new Triangle(stage, 'black', 'yellowgreen',2);
         $('body').on('mousedown', function(e){
             var initMousePosition = new Point(e.pageX, e.pageY);
             triangle.draw(initMousePosition);
