Added two colors to pick from and the ability to set the colors of the stroke and the fill.

--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -28,12 +28,16 @@
     <script src="scripts/shapes/rightTriangle.js"></script>
     <script src="scripts/shapes/circle.js"></script>
 
-    <script src="scripts/toolbox.js"></script>
-    <script src="scripts/engine.js"></script>
 
+    <script src="scripts/engine.js"></script>
+    <script src="scripts/toolbox.js"></script>
     <script>
-        // FOR TESTING PURPOSES
+
+        var eng = new Engine(); // REFACTOR! ENGINE IS CREATED 2 times!
 
     </script>
+
+
+   
 </body>
 </html>
