Added the base shape class shape.js. Changed the implementation of the shapes so they can be reusable. Many OOP changes.

--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -21,6 +21,7 @@
     <script src="lib/kinetic-v5.1.0.js"></script>
     <script src="lib/raphael.js"></script>
 
+    <script src="scripts/shapes/shape.js"></script>
     <script src="scripts/shapes/point.js"></script>
     <script src="scripts/shapes/line.js"></script>
     <script src="scripts/shapes/rectangle.js"></script>
