--- a/TeamMeatProject/PorkPaint/intro.html
+++ b/TeamMeatProject/PorkPaint/intro.html
@@ -9,7 +9,7 @@
     <body>
         <div id="wrapper">
             <header>
-                <img width="400" src="other/pig.svg" />
+                <img width="400" src="images/pig.svg" />
                 <h1>PorkPaint</h1>
                 <h2>An online drawing canvas built in JavaScript.</h2>
                 <a class="button" href="index.html">Start Drawing</a>
