--- a/TeamMeatProject/PorkPaint/intro.html
+++ b/TeamMeatProject/PorkPaint/intro.html
@@ -12,6 +12,7 @@
                 <img width="400" src="images/intro-pig.svg" />
                 <h1>PorkPaint</h1>
                 <h2>An online drawing canvas built in JavaScript.</h2>
+                <p>Vanina was here</p>
                 <a class="button" href="index.html">Start Drawing</a>
             </header>
             <footer>
