--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -16,6 +16,24 @@
         <div id="toolbox">
 
         </div>
+
+        <footer>
+            <a href="#openModal">How to Use</a>
+
+            <div id="openModal" class="modalDialog">
+                <div>
+                    <a href="#close" title="Close" class="close">X</a>
+                    <h4>Paint on Canvas</h4>
+                    <p>Click a button which has this icon: X and drag your mouse on the canvas.</p>
+
+                    <h4>Draw Shape</h4>
+                    <p>Click a button which has this icon: X, move your pointer over the image, then drag and drop it.</p>
+
+                    <h4>Clear Canvas</h4>
+                    <p>Click a button which has this icon: X.</p>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="lib/jquery-2.1.1.js"></script>
