--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -50,7 +50,10 @@
 
 
     <script src="scripts/engine.js"></script>
+    <script src="scripts/creatingControls.js"></script>
+    <script src="scripts/drawingControls.js"></script>
     <script src="scripts/toolbox.js"></script>
+    <script src="scripts/controlEvents.js"></script>
     <script>
 
         var eng = new Engine(); // REFACTOR! ENGINE IS CREATED 2 times!
