--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -47,7 +47,7 @@
     <script src="scripts/shapes/isoscelesTriangle.js"></script>
     <script src="scripts/shapes/rightTriangle.js"></script>
     <script src="scripts/shapes/circle.js"></script>
-
+    <script src="scripts/shapes/pencil.js"></script>
 
     <script src="scripts/engine.js"></script>
     <script src="scripts/creatingControls.js"></script>
