--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -40,7 +40,9 @@
     <script src="lib/kinetic-v5.1.0.js"></script>
     <script src="lib/raphael.js"></script>
 
+    <script src="scripts/shapes/linedrawer.js"></script>
     <script src="scripts/shapes/shape.js"></script>
+
     <script src="scripts/shapes/point.js"></script>
     <script src="scripts/shapes/line.js"></script>
     <script src="scripts/shapes/rectangle.js"></script>
