Final Intro Page

--- a/TeamMeatProject/PorkPaint/intro.html
+++ b/TeamMeatProject/PorkPaint/intro.html
@@ -1,22 +1,46 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Possible Intro Screen</title>
-        <script src="lib/kinetic-v5.1.0.min.js"></script>
-        <script src="lib/raphael-min.js"></script>
-        <link href="styles/intro.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div id="wrapper">
-            <header>
-                <img width="400" src="images/intro-pig.svg" />
-                <h1>PorkPaint</h1>
-                <h2>An online drawing canvas built in JavaScript.</h2>
-                <a class="button" href="index.html">Start Drawing</a>
-            </header>
-            <footer>
-                <p>Copyright &copy; Team Meat at Telerik Academy 2013/14</p>
-            </footer>
+<head>
+    <title>Pork Paint - Release the Artist Inside</title>
+    <link href="styles/intro.css" rel="stylesheet"/>
+    <link rel="stylesheet"
+          href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300|Bree+Serif">
+</head>
+<body>
+<a href="https://github.com/wIksS/Team-Meat"><img src="images/fork-me-on-github.png" alt="Fork me on GitHub"></a>
+
+<div id="wrapper">
+    <header>
+        <img src="images/intro-pig.svg" title="Pork Paint"/>
+        <h1>Pork Paint</h1>
+    </header>
+
+    <section>
+        <h2>An online drawing canvas built in JavaScript.</h2>
+
+        <div id="benefits">
+            <div class="placeholder">
+                <h3>Run Everywhere</h3>
+                <p>Pork Paint uses some of the most popular and supported JS libraries to deliver seamless
+                    performance.</p>
+            </div>
+            <div class="placeholder">
+                <h3>Hakuna Matata</h3>
+                <p>Release your creativity drawing lines and shapes, brushing around freestyle, and more.</p>
+            </div>
+            <div class="placeholder">
+                <h3>Open Source</h3>
+                <p>Pork Paint is hosted on GitHub. Bug reports, feature recommendations, and pull requests are
+                    encouraged and welcomed.</p>
+            </div>
         </div>
-    </body>
+    </section>
+
+    <a class="button" href="index.html">Start Drawing</a>
+
+    <footer>
+        <p>Copyright &copy; Team Meat at Telerik Academy 2013/14</p>
+    </footer>
+</div>
+</body>
 </html>
