--- a/TeamMeatProject/PorkPaint/index.html
+++ b/TeamMeatProject/PorkPaint/index.html
@@ -50,6 +50,7 @@
     <script src="scripts/shapes/rightTriangle.js"></script>
     <script src="scripts/shapes/circle.js"></script>
     <script src="scripts/shapes/pencil.js"></script>
+    <script src="scripts/shapes/webPencil.js"></script>
 
     <script src="scripts/engine.js"></script>
     <script src="scripts/creatingControls.js"></script>
